Fix dropdown vs. dialog z-index

--- a/panel/src/variables.css
+++ b/panel/src/variables.css
@@ -136,8 +136,8 @@
 
   --z-loader: 1000;
   --z-notification: 900;
-  --z-dropdown: 800;
-  --z-dialog: 700;
+  --z-dialog: 800;
+  --z-dropdown: 700;
   --z-drawer: 600;
   --z-dropzone: 500;
   --z-toolbar: 400;
